--- a/index.html
+++ b/index.html
@@ -14,6 +14,6 @@
     <div id="results"></div>
   </div>
 
-  <script src="script.js"></script>
+  <script src="index.js"></script>
 </body>
 </html>
