--- a/index.html
+++ b/index.html
@@ -3,16 +3,24 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>🎥 BlueTube</title>
+  <title>🎬 BlueTube</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="container">
-    <h1>🎥 BlueTube</h1>
+  <header class="header">
+    <h1>📺 BlueTube</h1>
+  </header>
+
+  <div class="search-box">
     <input type="text" id="search" placeholder="Search YouTube videos...">
     <button onclick="search()">Search</button>
-    <div id="results"></div>
   </div>
+
+  <h2 class="section-title">🔥 Trending Now</h2>
+  <div id="trending" class="results"></div>
+
+  <h2 class="section-title">📱 Shorts</h2>
+  <div id="shorts" class="results"></div>
 
   <script src="index.js"></script>
 </body>
