Update video.html structure and titles

--- a/video.html
+++ b/video.html
@@ -1,24 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>🎬 BlueTube Video</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>🎬 Watch Video - BlueTube</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <header class="header">
-    <h1>🎥 BlueTube</h1>
-    <a href="index.html" class="back-btn">⬅ Back</a>
+    <a href="index.html" class="nav-btn">⬅ Back</a>
+    <h1>BlueTube Player</h1>
   </header>
 
-  <div class="video-container">
+  <main class="video-container">
     <div id="player"></div>
-    <div id="video-info">
-      <h2 id="title"></h2>
-      <p id="description"></p>
-    </div>
-  </div>
+    <h2 id="title"></h2>
+    <p id="description"></p>
+  </main>
 
   <script src="video.js"></script>
 </body>
