--- a/short.html
+++ b/short.html
@@ -6,16 +6,13 @@
   <title>📱 BlueTube Shorts</title>
   <link rel="stylesheet" href="style.css">
 </head>
-<body>
+<body class="shorts-body">
   <header class="header">
     <h1>📱 BlueTube Shorts</h1>
-    <a href="index.html" class="back-btn">⬅ Home</a>
+    <a href="index.html" class="nav-btn">⬅ Home</a>
   </header>
 
-  <div class="shorts-container">
-    <h2 style="text-align:center;color:#1e90ff;">🔥 Trending Shorts</h2>
-    <div id="shorts" class="results"></div>
-  </div>
+  <main class="shorts-feed" id="shorts"></main>
 
   <script src="short.js"></script>
 </body>
