--- a/watch.html
+++ b/watch.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <h1>BlueTube</h1>
-    <a href="index.html">Home</a>
+    <a href="index.html" class="right-btn">Home</a>
   </header>
 
   <main id="video-container">
@@ -17,15 +17,13 @@
   </main>
 
   <script>
-    // Get video ID from URL query
     const params = new URLSearchParams(window.location.search);
     const videoId = params.get('v');
 
     if(videoId) {
-      const videoContainer = document.getElementById('video-container');
-      videoContainer.innerHTML = `
-        <iframe width="100%" height="500" src="https://www.youtube.com/embed/${videoId}" 
-        title="YouTube video player" frameborder="0" allowfullscreen></iframe>
+      document.getElementById('video-container').innerHTML = `
+        <iframe src="https://www.youtube.com/embed/${videoId}" 
+        title="YouTube video player" allowfullscreen></iframe>
       `;
     } else {
       document.getElementById('video-container').innerHTML = '<p>Video not found.</p>';
@@ -33,4 +31,3 @@
   </script>
 </body>
 </html>
-    
