--- a/index.html
+++ b/index.html
@@ -9,9 +9,35 @@
 <body>
   <header>
     <h1>BlueTube</h1>
-    <input type="text" id="search" placeholder="Search videos...">
-    <button id="searchBtn">Search</button>
+
+    <div class="header-center">
+      <input type="text" id="search" placeholder="Search videos...">
+      <button id="searchBtn">Search</button>
+      <nav>
+        <a href="#description">About</a>
+      </nav>
+    </div>
+
+    <div class="logos">
+      <img src="youtube-logo.png" alt="YouTube Logo">
+      <img src="github-logo.png" alt="GitHub Logo">
+    </div>
   </header>
+
+  <section id="description">
+    <h2>About BlueTube</h2>
+    <p>
+      BlueTube is a personal video platform powered by the <strong>YouTube API</strong> and hosted on <strong>GitHub Pages</strong>. 
+      It fetches trending videos and allows you to search for your favorite content seamlessly.
+    </p>
+    <p>
+      <strong>Creator:</strong> Christianpaul Compasivo<br>
+      <strong>Skills & Talents:</strong> Web development, JavaScript, HTML, CSS, YouTube API integration, UI/UX design.
+    </p>
+    <p>
+      <strong>Powered by:</strong> YouTube and GitHub
+    </p>
+  </section>
 
   <main>
     <div id="video-grid"></div>
@@ -19,4 +45,5 @@
 
   <script src="script.js"></script>
 </body>
-</html>
+                                 </html>
+                                 
