--- a/about.html
+++ b/about.html
@@ -17,8 +17,8 @@
     </div>
 
     <div class="logos">
-      <img src="images/youtube-logo.png" alt="YouTube Logo">
-      <img src="images/github-logo.png" alt="GitHub Logo">
+      <img src="youtube-logo.png" alt="YouTube Logo">
+      <img src="github-logo.png" alt="GitHub Logo">
     </div>
   </header>
 
