--- a/html/watch.html
+++ b/html/watch.html
@@ -1,21 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BlueTube - Watch</title>
-    <link rel="stylesheet" href="../css/watch.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>BlueTube - Watch</title>
+  <link rel="stylesheet" href="../css/watch.css">
 </head>
 <body>
-    <header class="navbar">
-        <h1>📺 BlueTube</h1>
-        <a href="home.html">Home</a>
-    </header>
+  <header class="navbar">
+    <h1>📺 BlueTube</h1>
+    <a href="home.html">Home</a>
+  </header>
 
-    <main class="watch-container" id="watchContainer">
-        <!-- Video player will load here -->
-    </main>
+  <main class="watch-container" id="watchContainer">
+    <!-- Video player will load here -->
+  </main>
 
-    <script src="../js/watch.js"></script>
+  <section class="video-info" id="videoInfo">
+    <h2 id="videoTitle"></h2>
+    <p id="videoDescription"></p>
+  </section>
+
+  <script src="../js/watch.js"></script>
 </body>
 </html>
