--- a/html/Page.html
+++ b/html/Page.html
@@ -85,7 +85,7 @@
 <!-- Hero Section -->
 <section class="hero">
   <a href="https://ratetanginamo.github.io/Bluetube/html/home.html" target="_blank">
-    <img src="https://i.postimg.cc/yD37KPsF/unnamed-(1).jpg" alt="Bluetube Hero Image">
+    <img src="unnamed (1).jpg" alt="Bluetube Hero Image">
   </a>
 </section>
 
